<resources>
    <string name="app_name">Travelers</string>

    <!-- BottomNav    -->
    <string name="menu_search_title">Поиск</string>
    <string name="menu_trip_title">Поездка</string>
    <string name="menu_profile_title">Профиль</string>

    <!-- Search   -->
    <string name="search_field_address_from_hint">Откуда</string>
    <string name="search_field_address_destination_hint">Куда</string>
    <string name="search_field_calendar_hint">Когда</string>
    <string name="search_field_count_hint">Количество мест</string>
    <string name="search_screen_title">Поиск поездок</string>
    <string name="search_search_button_text">Искать</string>

    <!-- Trip   -->
    <string name="trip_screen_time_out_text">Выезд:</string>
    <string name="trip_screen_time_finish_text">Прибытие</string>
    <string name="trip_screen_1_passanger_text">1 пассажир:</string>
    <string name="trip_screen_count_text">Осталось мест:</string>
    <string name="trip_screen_call_button_text">Позвонить</string>

    <!-- New Trip   -->
    <string name="new_trip_screen_title">Создать поездку</string>
    <string name="new_trip_create_button_text">Создать</string>
    <string name="new_trip_next_button_text">Далее</string>
    <string name="new_trip_continue_button_text">Продолжить</string>
    <string name="trip_unauthorized_block_title">Для создания поездки</string>
    <string name="trip_unauthorized_block_title_continuation">нужно Войти или Зарегистрироваться</string>
    <string name="registration_button_text">Регистрация</string>
    <string name="login_button_text">Вход</string>
    <string name="trip_confirm_route_start_text">Выезд</string>
    <string name="trip_confirm_date_text">Дата:</string>
    <string name="trip_confirm_time_text">Время:</string>
    <string name="trip_confirm_date_time_title_text">Время</string>
    <string name="trip_confirm_address_title_text">Укажите место</string>
    <string name="trip_confirm_route_time_text">Время в пути</string>
    <string name="trip_confirm_route_end_text">Прибытие</string>
    <string name="trip_confirm_set_time_button_text">указать время</string>
    <string name="trip_confirm_route_time_descr_text">Сколько займет поездка?</string>
    <string name="trip_confirm_set_car_button_text">Выберите машину</string>
    <string name="trip_confirm_address_text">Адрес:</string>
    <string name="trip_confirm_address_point_text">Место посадки:</string>
    <string name="trip_confirm_car_title">Машина</string>
    <string name="trip_confirm_price_title">Стоимость поездки</string>
    <string name="trip_confirm_set_car_price_text">Укажите стоимость:</string>
    <string name="trip_confirm_address_end_point_text">Место высадки:</string>
    <string name="trip_confirm_address_point_field_hint">Где заберете пассажиров?</string>
    <string name="trip_confirm_address_end_point_field_hint">Где высадите пассажиров?</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="two_points">:</string>
    <string name="button_to_back_text">Назад</string>
    <string name="button_edit_text">Изменить</string>
    <string name="button_publish_text">Опубликовать</string>
    <string name="trip_confirm_change_car_button_text">Выбрать другую</string>
    <string name="trip_confirm_create_trip_button_text">Создать поездку</string>
    <string name="trip_confirmation_toolbar_title">Создание поездки</string>
    <string name="zero">0</string>
    <string name="dialog_new_trip_confirm_description_text">Так будет выглядеть ваша поездка.\nДополнительная информация будет внутри.</string>
    <string name="dialog_new_trip_price_description_text">Сервис не берет комиссию за оплату.\nРасчет с пассажирами производите самостоятельно!</string>
    <string name="dialog_new_trip_confirm_title">Ваша поездка</string>
    <string name="done_button_text">Готово!</string>
    <string name="car_selected_seats_text">Место:</string>
    <string name="new_trip_confirm_step_1_screen_title">Откуда вы выезжаете?</string>
    <string name="new_trip_confirm_step_2_screen_title">Куда вы едете?</string>
    <string name="new_trip_confirm_step_3_screen_title">Укажите машину</string>
    <string name="new_trip_confirm_passenger_count_title">Сколько пассажиров возьмете?</string>
    <string name="new_trip_confirm_step_4_screen_title">Укажите стоимость поездки</string>
    <string name="local_currency">*сомони</string>

    <string-array name="currency_variables">
        <item>TJ Сомони</item>
        <item>UZ Sum</item>
        <item>RU Рубль</item>
        <item>KG Сом</item>
    </string-array>

    <!-- Profile    -->
    <string name="profile_unauth_block_title">Создайте аккаунт</string>
    <string name="profile_unauth_block_title2">Создайте аккаунт или Войдите</string>
    <string name="profile_unauth_block_description">и начните зарабатывать на своих поездках!</string>
    <!--    <string name="profile_unauth_block_description">чтобы зарабатывать на своих поездках</string>-->
    <string name="profile_unauth_block_description2">Уже есть аккаунт?</string>
    <string name="profile_login_button_text">Войти</string>
    <string name="profile_register_button_text">Создать аккаунт</string>
    <string name="profile_toolbar_title">Личный кабинет</string>
    <string name="profile_option_my_cars_text">Мои машины</string>
    <string name="profile_option_my_trips_text">Мои поездки</string>
    <string name="profile_option_settings_text">Настройки</string>
    <string name="profile_option_help_text">Помощь</string>
    <string name="profile_option_privacy_policy_text">Политика конфиденциальности</string>
    <string name="profile_option_agreement_text">Пользовательское соглашение</string>
    <string name="profile_option_logout_text">Выйти из аккаунта</string>
    <string name="account_settings_toolbar_title">Настройки аккаунта</string>
    <string name="dialog_account_exit_text">Выйти из аккаунта?</string>
    <string name="cancel_button_text">Отмена</string>
    <string name="dialog_exit_button_text">Выйти</string>

    <!--    Регистрация -->
    <string name="registration_toolbar_title">Регистрация</string>
    <string name="registration_title">Регистрация</string>
    <string name="registration_name_hint">Имя</string>
    <string name="registration_lastname_hint">Фамилия (необязательно)</string>
    <string name="registration_lastname_label">Фамилия</string>
    <string name="registration_email_hint">Email</string>
    <string name="registration_password_hint">Пароль</string>
    <string name="registration_password_2_hint">Повторите пароль</string>
    <string name="registration_phone_hint">Номер телефона</string>
    <string name="registration_whatsapp_description">Добавьте номер WhatsApp для связи</string>
    <string name="registration_phone_registered_text">Этот номер уже зарегистрирован!</string>
    <string name="registration_phone_registered_text_2">Попробуйте</string>
    <string name="registration_phone_registered_error">Номер уже зарегистрирован!</string>
    <string name="registration_finish_dialog_title">Подтвердите номер телефона</string>
    <string name="registration_finish_dialog_description">для завершения регистрации</string>
    <string name="registration_finish_dialog_sms_send_description">Вам отправлен SMS с кодом подтверждения\nна номер %s</string>
    <string name="registration_finish_dialog_no_sms_description">Не приходит SMS? Вы можете запросить\nкод повторно через %d секунд.</string>
    <string name="registration_finish_dialog_no_sms">Не пришло SMS?</string>
    <string name="registration_finish_dialog_sms_new">Отправить повторно</string>
    <string name="registration_finish_dialog_sms_code_hint">Введите код из SMS</string>
    <string name="registration_register_button_text">Регистрация</string>
    <string name="registration_login_button_text">войти</string>
    <string name="registration_cancel_button_text">Отмена</string>
    <string name="registration_confirm_button_text">Подтвердить</string>

    <string name="menu_phone_tj" translatable="false">+992</string>
    <string name="menu_phone_uz" translatable="false">+998</string>
    <string name="menu_phone_kg" translatable="false">+996</string>

    <!--    Вход -->
    <string name="login_title">Вход в аккаунт</string>
    <string name="login_phone_not_registered_text">Аккаунт с таким номером не найден</string>
    <string name="login_register_button_text">зарегистрироваться</string>
    <string name="login_sign_in_button_text">Войти</string>
    <string name="login_finish_dialog_sms_send_description">Вам отправлен SMS с кодом \nна номер %s</string>
    <string name="login_finish_dialog_title">Введите код из SMS</string>
    <string name="profile_edit_whatsapp_description">Номер WhatsApp</string>
    <string name="profile_edit_save_button_text">Сохранить</string>
    <string name="profile_edit_delete_account_button_text">Удалить аккаунт</string>
    <string name="profile_edit_lastname_hint">Фамилия</string>
    <string name="profile_edit_wa_number_hint">Введите номер с кодом страны</string>

    <!--    Мои машины -->
    <string name="my_cars_toolbar_title">Мои машины</string>
    <string name="my_cars_add_car_text">добавить машину</string>
    <string name="my_cars_add_car_button_text">Добавить машину</string>
    <string name="my_cars_no_cars_text">У вас пока нет\nдобавленных машин</string>

    <!--    Добавить машину -->
    <string name="add_car_toolbar_title">Добавить машину</string>
    <string name="new_car_add_button_text">Сохранить</string>
    <string name="new_car_add_car_dialog_title">Добавить машину</string>
    <string name="new_car_add_photo_text">Добавить фото</string>
    <string name="new_car_car_brand_hint">Выберите марку</string>
    <string name="new_car_car_model_hint">Выберите модель</string>
    <string name="new_car_car_year_hint">Год</string>
    <string name="new_car_car_color_hint">Цвет</string>
    <string name="new_car_car_seats_hint">Мест для пассажиров</string>

    <!--    Мои поездки -->
    <string name="my_trips_toolbar_title">Мои поездки</string>
    <string name="my_trips_no_trips_text">У вас пока нет\nпоездок</string>

    <!--    Настройки профиля -->
    <string name="profile_edit_toolbar_title">Настройки профиля</string>

    <!--    Настройки -->
    <string name="settings_toolbar_title">Настройки</string>
    <string name="settings_language_option_title">Язык</string>
    <string name="settings_theme_option_title">Темный режим</string>

    <!--    Помощь -->
    <string name="help_toolbar_title">Помощь</string>
    <string name="help_write_us_title">Напишите нам</string>
    <string name="help_write_us_description">если у вас появились вопросы</string>
    <string name="help_hint_name">Ваше имя</string>
    <string name="help_hint_email">Ваш Email</string>
    <string name="help_hint_message">Напишите ваш вопрос</string>
    <string name="help_add_file_text">Прикрепить файл</string>
    <string name="help_send_message_button_text">Отправить</string>

    <!--    Политика конфиденциальности -->
    <string name="privacy_policy_toolbar_title">Политика конфиденциальности</string>
    <string name="privacy_policy_screen_title">Политика\nконфиденциальности</string>

    <!--    Пользовательское соглашение -->
    <string name="user_agreement_toolbar_title">Пользовательское соглашение</string>
    <string name="user_agreement_screen_title">Пользовательское\nсоглашение</string>

</resources>