<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/profileUnauthorizedLayout"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_unauth_block_title"
        android:textAlignment="center"
        android:textAppearance="@style/ScreenTitleStyle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/profile_unauth_block_description"
        android:textAlignment="center"
        android:textAppearance="@style/GeologicaReg14" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        style="@style/OutlinedButtonStyle"
        android:text="@string/profile_register_button_text"
        android:layout_gravity="center"
        android:layout_width="@dimen/button_max_width"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_small"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_unauth_block_description2"
        android:textAlignment="center"
        android:textAppearance="@style/GeologicaLight14" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/FilledButtonStyle"
        android:text="@string/profile_login_button_text"
        android:layout_gravity="center"
        android:layout_width="@dimen/button_max_width"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>