<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_left"
        app:title="@string/trip_confirmation_toolbar_title"
        app:titleCentered="true"
        app:titleTextAppearance="@style/GeologicaReg16" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_trip_confirm_step_4_screen_title"
            android:textAlignment="textStart"
            android:textAppearance="@style/ScreenTitleStyle"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_small_10" />

        <com.google.android.material.card.MaterialCardView
            style="@style/CardViewOnTripScreenStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/priceBlock"
                layout="@layout/block_plus_minus_big_text_field" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_extra_small"
            android:text="@string/local_currency"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TripConfirmGreyTextStyle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_new_trip_price_description_text"
        android:textAlignment="center"
        android:textAppearance="@style/GreyDescriptionTextStyle"
        android:layout_marginBottom="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/publishButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/publishButton"
        style="@style/FilledButtonStyle"
        android:layout_width="@dimen/button_max_width"
        android:layout_height="@dimen/button_height"
        android:contentDescription="@null"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/button_publish_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>